# -

./: Dockerfile  Makefile  README.md  afl-gcc.c  build.sh  caddy-ctfd-info  compilation_flag.patch  diymalloc.h  dtest.c  exploit  glibc2.32_coverage.patch  helper1.py  helper2.asm  malloc-2.7.2.c  malloc_cov_test.c  part1.patch  part2.patch  run.sh  solve.py  transfer.sh
bytecode_examples/example1/: Move.toml
bytecode_examples/example2/: Move.toml  output.txt  output2.txt
bytecode_examples/example2/sources/: source.move
test_fork/: Cargo.toml  output.txt
test_fork/src/: main.rs
