[package]
name = "test_fork"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
move-binary-format = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1" }
move-core-types = { git = "https://github.com/move-language/move", rev = "60cec12b1ed9382836aa4c141e445656d39375e1" }
sui-types = { git = "https://github.com/MystenLabs/sui"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"